[package]
name = "latency-slayer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
sha2 = "0.10"
redis = { version = "0.32.7", features = ["tokio-comp", "tls-rustls", "tokio-rustls-comp", "tls-rustls-webpki-roots"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
dotenvy = "0.15"

